--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -1,3 +1,6 @@
+h1{
+    text-decoration: none;
+}
 .home-hero{
     display: flex;
     flex-direction: column;
@@ -21,7 +24,9 @@
 }
 .button_{
     padding: 5px;
-    font-size: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 15px;
     color:#71c55d;
     background-color: white;
     border: #71c55d 2px solid;
@@ -29,4 +34,22 @@
     border-top-right-radius: 50px;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
+    transition: background-color 0.3sec ease;
+}
+.button_:hover{
+    transition-delay: 0.2sec;
+    color: white;
+    background-color: #71c55d;
+    border:solid white  2px;
+    
+}
+.home-hero__heading{
+    font-size: 20px;
+    margin-top: 150px;
+}
+.home-hero__para{
+    line-height: 35px;
+    margin-left: 170px;
+    margin-right: 170px;
+    margin-top: 30px;
 }
